# tauri-playground

./: .eslintrc.js  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/store/: index.ts
src/store/Auth/: index.ts
src/utils/: client.ts
src/views/Home/: index.vue
